Fix: changed the button border and style for a more aligned design

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,15 +62,22 @@ footer {
 }
 
 .btn {
-    background-color: #84aeaa;
     border-radius: 100px;
     color: black;
-    border: 2px solid black;
+    margin-top: 5px;
 }
 
-.btn:hover {
-    background-color: #9ca593;
-    color: black;
-    border: 2px solid black;
+.btn-one {
+    position: relative;
+    overflow: hidden;
+    background-color: #84aeaa;
+    border: 2px solid transparent; 
+    transition: color 0.3s, background-color 0.3s, border-color 0.3s; 
 }
 
+/* Hover effect */
+.btn-one:hover {
+    background-color: #9ca593; 
+    color: white; 
+    border-color: black; 
+}
